# opendrc

./: CMakeLists.txt
odrc/: main.cpp
odrc/core/: execution.hpp
odrc/gdsii/: gdsii.cpp  gdsii.hpp
